<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:padding="@dimen/_24sdp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:orientation="vertical"
                android:paddingStart="@dimen/_22sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingEnd="@dimen/_22sdp"
                android:paddingBottom="@dimen/_12sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/common_dialog_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_futura_medium"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/colorButtonRedOne"
                    android:textSize="@dimen/_20ssp"
                    app:layout_constraintBottom_toTopOf="@+id/text_message"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center_horizontal"

                    android:background="@color/white"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/decrement"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="match_parent"
                        android:background="@drawable/border_gray"
                        android:padding="0dp"
                        android:text="—"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:text="0"
                        android:id="@+id/weight"
                        android:layout_width="@dimen/_140sdp"
                        android:layout_height="match_parent"
                        android:background="@drawable/border_gray_white_bg"
                        android:gravity="center"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:textColor="@android:color/black" />

                    <Button
                        android:id="@+id/increment"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="match_parent"
                        android:background="@drawable/border_gray"
                        android:padding="0dp"
                        android:text="+"
                        android:textColor="@color/black"
                        android:textSize="25sp" />
                </LinearLayout>


                <!--    <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@android:color/transparent"
                    android:textColorHint="@color/colorGrey"
                    android:theme="@style/TextLabel"
                    app:boxBackgroundColor="@android:color/transparent">

                    <EditText
                        android:inputType="number"
                        android:id="@+id/et_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha=".5"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp" />

                </com.google.android.material.textfield.TextInputLayout>
-->
                <!--<TextView
                    android:id="@+id/text_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/const_buttons"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_title"
                    tools:text="@string/dummy_text_small" />-->

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/const_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_message">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_negative"
                        style="@style/ButtonRedOne"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/no"

                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/button_ok"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/weight_ok"
                        style="@style/ButtonRedOne"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:text="@string/ok"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/button_positive"
                        app:layout_constraintStart_toEndOf="@+id/button_negative"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_positive"
                        style="@style/ButtonRedOne"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="@string/yes"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/button_ok"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>